syntax = "proto3";
option csharp_namespace = "GrpcGreeterClient";
package com.odde.atddv2.grpc;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}